fix gatekeeper constriants

--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -14,5 +14,5 @@ spec:
     - prometheus
     - velero
   parameters:
-    cpu: {{ .Values.limits.cpu }}
-    memory: {{ .Values.limits.memory }}
+    cpu: "{{ .Values.limits.cpu }}"
+    memory: "{{ .Values.limits.memory }}"
