fix constraints values

--- a/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
@@ -14,5 +14,5 @@ spec:
     - prometheus
     - velero
   parameters:
-    cpu: {{ .Values.requests.cpu }}
-    memory: {{ .Values.requests.memory }}
+    cpu: "{{ .Values.requests.cpu }}"
+    memory: "{{ .Values.requests.memory }}"
