fix for gatekeeper constraints to exclude cattle-system namespace for Rancher

--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -13,6 +13,7 @@ spec:
     - external-dns
     - prometheus
     - velero
+    - cattle-system
   parameters:
     cpu: "{{ .Values.limits.cpu }}"
     memory: "{{ .Values.limits.memory }}"
