--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -14,6 +14,7 @@ spec:
     - prometheus
     - velero
     - cattle-system
+    - ingress-nginx
   parameters:
     cpu: "{{ .Values.limits.cpu }}"
     memory: "{{ .Values.limits.memory }}"
