exceptions for nginx ingress controller limits/requests

--- a/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
@@ -14,6 +14,7 @@ spec:
     - prometheus
     - velero
     - cattle-system
+    - ingress-nginx
   parameters:
     cpu: "{{ .Values.requests.cpu }}"
     memory: "{{ .Values.requests.memory }}"
