zabbix a gatekeeper exception

--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -15,6 +15,7 @@ spec:
     - velero
     - cattle-system
     - ingress-nginx
+    - zabbix
   parameters:
     cpu: "{{ .Values.limits.cpu }}"
     memory: "{{ .Values.limits.memory }}"
