--- a/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
@@ -15,6 +15,7 @@ spec:
     - velero
     - cattle-system
     - ingress-nginx
+    - zabbix
   parameters:
     cpu: "{{ .Values.requests.cpu }}"
     memory: "{{ .Values.requests.memory }}"
