temporary gatekeeper exception for airbyte namespace

--- a/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_requests.yaml
@@ -16,6 +16,7 @@ spec:
     - cattle-system
     - ingress-nginx
     - zabbix
+    - airbyte
     - fargate-*
   parameters:
     cpu: "{{ .Values.requests.cpu }}"
