--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -16,6 +16,7 @@ spec:
     - cattle-system
     - ingress-nginx
     - zabbix
+    - airbyte
     - fargate-*
   parameters:
     cpu: "{{ .Values.limits.cpu }}"
