goldilocks exception for gatekeeper

--- a/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
+++ b/helm/gatekeeper-constraints/chart/templates/container_limits.yaml
@@ -18,6 +18,7 @@ spec:
     - zabbix
     - airbyte
     - fargate-*
+    - goldilocks
   parameters:
     cpu: "{{ .Values.limits.cpu }}"
     memory: "{{ .Values.limits.memory }}"
